Немного правок после Вебинара